--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -6,18 +6,19 @@
 }
 
 .item-card {
+  height: 300px;
+  width: 400px;
   background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 8px;
   padding: 16px;
   text-align: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  cursor: pointer;
 }
 
 .product-image {
-  max-width: 100%;
-  height: auto;
+  width: auto;
+  height: 50%;
   margin-bottom: 8px;
 }
 
